# RMV-task04

./: README.md
$(ALLUSERSPROFILE)/GenICam/xml/cache/: SchemaVersion.1.0@Hikrobot#U3V#MV-CA016-10UC#V1.6.1 200922 504698@XMLVersion.1.0.0.md5  SchemaVersion.1.0@Hikvision#U3V#MV-CE060-10UC#V1.6.0 200730 477417@XMLVersion.1.0.0.md5
install/: local_setup.sh  setup.sh
install/hik_camera_ros2/include/hik_camera_ros2/: hik_camera_node.hpp
install/hik_camera_ros2/lib/hik_camera_ros2/: hik_camera_node
install/hik_camera_ros2/share/hik_camera_ros2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hik_camera_ros2/share/hik_camera_ros2/cmake/: hik_camera_ros2Config.cmake
install/hik_camera_ros2/share/hik_camera_ros2/config/: camera_params.yaml
install/hik_camera_ros2/share/hik_camera_ros2/launch/: hik_camera.launch.py
log/: latest_build
src/hik_camera_ros2/: CMakeLists.txt  package.xml  run.sh
src/hik_camera_ros2/config/: camera_params.yaml
src/hik_camera_ros2/include/hik_camera_ros2/: hik_camera_node.hpp
src/hik_camera_ros2/launch/: hik_camera.launch.py
src/hik_camera_ros2/src/: hik_camera_node.cpp
